2010-01-29  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-after-dir-status): Match another renaming indicator.

2010-01-29  Chong Yidong  <cyd@stupidchicken.com>

	* dirtrack.el (dirtrack): Warn instead of signalling error if the
	regexp is incorrect (Bug#5476).

2010-01-29  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-directory): Handle also
	symlinks, when FILENAME is not in `default-directory'.

2010-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/ange-ftp.el (ange-ftp-insert-directory): Handle the case,
	FILE is not in `default-directory'.  (Bug#5478)

	* net/tramp.el (tramp-handle-insert-directory): Simplify handling
	of SWITCHES.  Handle the case, FILENAME is not in
	`default-directory'.  (Bug#5478)
	(tramp-register-file-name-handlers): Add safe-magic property.

2010-01-28  Chong Yidong  <cyd@stupidchicken.com>

	* arc-mode.el (archive-zip-extract): Quote the argument passed to
	unzip (Bug#5475).

2010-01-28  Nil Geisweiller  <ngeiswei@googlemail.com>  (tiny change)

	* progmodes/flymake.el (flymake-allowed-file-name-masks)
	(flymake-master-make-header-init): Add other C++ filename masks.
	(flymake-find-possible-master-files)
	(flymake-check-patch-master-file-buffer): Doc fixes (Bug#5488).

2010-01-28  Michael Albinus  <michael.albinus@gmx.de>

	Fix some busybox annoyances.

	* net/tramp.el (tramp-wrong-passwd-regexp): Add "Timeout, server
	not responding." string.
	(tramp-open-connection-setup-interactive-shell): Dump stty
	settings.  Enable "neveropen" arg for all `tramp-send-command'
	calls.  Handle "=" in variable values properly.
	(tramp-find-inline-encoding): Raise an error, when no encoding is
	found.
	(tramp-wait-for-output): Check, whether PROC buffer is available.
	Remove spurious " ^H" sequences, sent by busybox.
	(tramp-get-ls-command): Suppress coloring, if possible.

2010-01-28  Glenn Morris  <rgm@gnu.org>

	* vc-svn.el (vc-svn-update): Use "svn --non-interactive".  (Bug#4280)
